plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'

	//queryDSL
//	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
}

group = 'com.beour'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'


	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'  //test위한 내장 db 사용 추가
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.json:json:20231013'

	// QueryDSL 설정 (jakarta 버전: Spring Boot 3+용) - 추후 QueryDSL 사용시
//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
//	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
//	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
//	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
}



tasks.named('test') {
	useJUnitPlatform()
}

